[project]
name = "py_logging_classes"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jack Kenyon", email = "jkenyon@embracepetinsurance.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
